add more fields

--- a/src/main/java/com/jmelzer/webapp/page/ShowIssuePage.properties
+++ b/src/main/java/com/jmelzer/webapp/page/ShowIssuePage.properties
@@ -7,6 +7,10 @@ component=Komponente
 fixversion=Fix In Version
 affectedversion=Betrifft Version
 description=Beschreibung
-assignee=Assignee
+assignee=Assignee:
+reporter=Autor:
 remainingestimate=Rest-Zeit
 orgestimate=Gesch\u00E4tzt
+creation=Erstellt am:
+update=Ge\u00E4ndert am:
+desc=Beschreibung
