--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,11 @@
             <artifactId>wicket-auth-roles</artifactId>
             <version>${wicket.version}</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-velocity</artifactId>
             <version>${wicket.version}</version>
-        </dependency>
+        </dependency>-->
         <!--
               OPTIONAL <dependency> <groupId>org.apache.wicket</groupId>
               <artifactId>wicket-extensions</artifactId>
