--- a/src/main/java/com/jmelzer/webapp/page/CommentPage.properties
+++ b/src/main/java/com/jmelzer/webapp/page/CommentPage.properties
@@ -1,14 +1,4 @@
 
-project=Projekt
-projectLabel=Projekt
-issuetype=Typ
-summary=Zusammenfassung
-priority=Priorit\u00E4t
-duedate=Fix bis
-component=Komponente
-fixversion=Fix In Version
-affectedversion=Betrifft Version
-description=Beschreibung
-assignee=Assignee
-remainingestimate=Rest-Zeit
-orgestimate=Gesch\u00E4tzt
+commentlabel=Kommentar
+okbutton=Ok
+cancellink=Abbrechen
