--- a/src/main/resources/app-default.properties
+++ b/src/main/resources/app-default.properties
@@ -1,3 +1,6 @@
 
-db.username=root
+#db.username=root
+db.url=jdbc:mysql://localhost/wreckcontrol?autoCommit=false
+#db.url=jdbc:mysql://ec2-174-129-9-255.compute-1.amazonaws.com/wreckcontrol
+db.username=wreckcontrol
 db.password=42
