switch to jpa instead of native hibernate interfaces add spring env props for staging etc. fix createissue bug after migrating to wicket 6

--- a/src/main/resources/app-default.properties
+++ b/src/main/resources/app-default.properties
@@ -2,5 +2,6 @@
 #db.username=root
 db.url=jdbc:mysql://localhost/wreckcontrol?autoCommit=false
 #db.url=jdbc:mysql://ec2-174-129-9-255.compute-1.amazonaws.com/wreckcontrol
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 db.username=wreckcontrol
 db.password=42
