--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <spring-security.version>3.1.0.RELEASE</spring-security.version>
         <slf4j.version>1.6.4</slf4j.version>
         <logback.version>1.0.0</logback.version>
+        <hibernate.version>4.1.1.Final</hibernate.version>
     </properties>
 
     <dependencies>
@@ -125,12 +126,17 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.1.3.Final</version>
+            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-search</artifactId>
-            <version>4.1.1.Final</version>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
         <!-- <dependency>
             <groupId>org.hibernate</groupId>
@@ -415,6 +421,13 @@
             <artifactId>visural-wicket-w14</artifactId>
             <version>0.7.0</version>
         </dependency>-->
+        <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.10</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
@@ -434,6 +447,10 @@
             </resource>
         </resources>
         <testResources>
+            <testResource>
+                <filtering>false</filtering>
+                <directory>src/test/resources</directory>
+            </testResource>
             <testResource>
                 <filtering>false</filtering>
                 <directory>src/test/java</directory>
