--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,11 +22,11 @@
     <filter>
         <filter-name>opensessioninview</filter-name>
         <filter-class>
-            org.springframework.orm.hibernate4.support.OpenSessionInViewFilter
+            org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
         </filter-class>
         <init-param>
-            <param-name>sessionFactoryBeanName</param-name>
-            <param-value>hibernateSessionFactory</param-value>
+            <param-name>entityManagerFactoryBeanName</param-name>
+            <param-value>entityManagerFactory</param-value>
         </init-param>
         <init-param>
             <param-name>singleSession</param-name>
