change version of dashboard

--- a/pom.xml
+++ b/pom.xml
@@ -339,13 +339,13 @@
         <dependency>
             <groupId>ro.fortsoft.wicket.dashboard</groupId>
             <artifactId>wicket-dashboard-core</artifactId>
-            <version>0.6-SNAPSHOT</version>
+            <version>0.5</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>ro.fortsoft.wicket.dashboard.widgets</groupId>
             <artifactId>wicket-dashboard-loremipsum</artifactId>
             <version>0.6-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>stax</groupId>
             <artifactId>stax-api</artifactId>
