--- a/src/main/java/com/jmelzer/webapp/page/ShowIssuePage.properties
+++ b/src/main/java/com/jmelzer/webapp/page/ShowIssuePage.properties
@@ -16,3 +16,5 @@ update=Ge\u00E4ndert am:
 desc=Beschreibung
 comments=Kommentare
 status=Status
+warning=Warnung
+confirm.delete=M\u00F6chten Sie wirklich l\u00F6schen?
