add preview to model and integrate image magick

--- a/src/test/resources/app-test.properties
+++ b/src/test/resources/app-test.properties
@@ -2,3 +2,5 @@
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 db.username=root
 db.password=42
+attachment.path=./target/attachments
+image.magick.path=C:/tools/ImageMagick-6.8.1-Q16
