--- a/src/main/resources/app-default.properties
+++ b/src/main/resources/app-default.properties
@@ -5,3 +5,5 @@ db.url=jdbc:mysql://localhost/wreckcontrol?autoCommit=false
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 db.username=wreckcontrol
 db.password=42
+attachment.path=c:/tmp/attachments
+image.magick.path=C:/tools/ImageMagick-6.8.1-Q16
