--- a/src/main/resources/app-inmem.properties
+++ b/src/main/resources/app-inmem.properties
@@ -1,2 +1,4 @@
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
+attachment.path=c:/tmp/attachments
+image.magick.path=C:/tools/ImageMagick-6.8.1-Q16
