--- a/src/main/java/com/jmelzer/webapp/page/ShowIssuePage.properties
+++ b/src/main/java/com/jmelzer/webapp/page/ShowIssuePage.properties
@@ -18,3 +18,4 @@ comments=Kommentare
 status=Status
 warning=Warnung
 confirm.delete=M\u00F6chten Sie wirklich l\u00F6schen?
+attachments=Anh\u00E4nge
