--- a/src/main/java/com/jmelzer/webapp/page/UploadPage.properties
+++ b/src/main/java/com/jmelzer/webapp/page/UploadPage.properties
@@ -2,3 +2,4 @@ label.entry1=Bitte wählen Sie eine Datei aus und drücken Sie auf hochladen.
 label.entry2=Akzeptierte Datein sind: PDF, Bilder, Videos, Textdateien
 
 upload=Hochladen
+title=Anhang hochladen
