add result table

--- a/src/main/java/com/jmelzer/webapp/WicketApplication.properties
+++ b/src/main/java/com/jmelzer/webapp/WicketApplication.properties
@@ -3,3 +3,7 @@ commentlabel=Kommentar
 okbutton=Ok
 cancellink=Abbrechen
 uploaded.attachments=Hochgeladene Anh\u00E4nge
+
+priority=Priorit\u00E4t
+status=Status
+summary=Zusammenfassung
