add query string  to ui

--- a/src/main/java/com/jmelzer/webapp/WicketApplication.properties
+++ b/src/main/java/com/jmelzer/webapp/WicketApplication.properties
@@ -7,3 +7,5 @@ uploaded.attachments=Hochgeladene Anh\u00E4nge
 priority=Priorit\u00E4t
 status=Status
 summary=Zusammenfassung
+assignee=Zugewiesen zu
+reporter=Erstellt von
