--- a/src/main/resources/app-default.properties
+++ b/src/main/resources/app-default.properties
@@ -5,5 +5,7 @@ db.url=jdbc:mysql://localhost/wreckcontrol?autoCommit=false
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 db.username=wreckcontrol
 db.password=42
-attachment.path=c:/tmp/attachments
+attachment.path=c:/tmp/lukchan/attachments
 image.magick.path=C:/tools/ImageMagick-6.8.1-Q16
+index.dir=c:/tmp/lukchan/indexes
+index.directory_provider=org.hibernate.search.store.impl.FSDirectoryProvider
