--- a/src/test/resources/app-test.properties
+++ b/src/test/resources/app-test.properties
@@ -4,3 +4,5 @@ db.username=root
 db.password=42
 attachment.path=./target/attachments
 image.magick.path=C:/tools/ImageMagick-6.8.1-Q16
+index.dir=target/indexes
+index.directory_provider=org.hibernate.search.store.impl.RAMDirectoryProvider
